Partially fix the problem with fixed size videos
Youtube permanently switched to using fixed sized videos. This results in the
video being shown too small when using the option to increase the size of the
video player.
This commit introduces some css that pertially fixes the problem: The video
itself is now displayed properly, however the progress bar and annotations
are not. It is based on an idea by Yonezpt in the issue linked below.

There is currently no simple solution to this problem, because all possible
solutions either break other functionality or involve injecting code into
the minified youtube player, which is very hard to maintain. (and ugly)

See here for more details: https://github.com/YePpHa/YouTubeCenter/issues/1083

--- a/data/youtube-html5.css
+++ b/data/youtube-html5.css
@@ -2,3 +2,21 @@
 .yt-alert.yt-alert-default.yt-alert-error.yt-alert-player {
     display: none !important;
 }
+
+/**
+ * Fix video size issues
+ * Thanks to Yonezpt!
+ * https://github.com/YePpHa/YouTubeCenter/issues/1083#issuecomment-60902245
+ **/
+html:not([data-player-size="fullscreen"]) div#player-api video,
+html:not([data-player-size="fullscreen"]) div#player-api div.html5-video-content {
+    min-width: 100%;
+    min-height: 100%;
+    left: 0 !important; /* Needed for 4:3 videos */
+}
+div#player-api .ended-mode video,
+div#player-api .ended-mode html5-video-content {
+    /* video is hidden at the end, so do not force size anymore */
+    min-height: unset !important;
+    min-width: unset !important;
+}
